# biokitpp

./: .clang-tidy  .gitattributes  .gitmodules  CMakeLists.txt  README.md
include/bio/Seq/: fasta.hpp
include/bio/SeqIO/: fasta.hpp
include/bio/utils/: trim.hpp
src/: CMakeLists.txt
src/core/Seq/: fasta.cpp
src/core/SeqIO/: fasta.cpp
src/util/: trim.cpp  trim.hpp
src/utils/: trim.cpp  trim.hpp
